// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionsDropdown renders ActionsDropdown correctly 1`] = `
<ActionsDropdown
  onClickItem={[MockFunction]}
>
  <Component
    locale={
      {
        "code": "en-US",
        "formatDistance": [Function],
        "formatLong": {
          "date": [Function],
          "dateTime": [Function],
          "time": [Function],
        },
        "formatRelative": [Function],
        "localize": {
          "day": [Function],
          "dayPeriod": [Function],
          "era": [Function],
          "month": [Function],
          "ordinalNumber": [Function],
          "quarter": [Function],
        },
        "match": {
          "day": [Function],
          "dayPeriod": [Function],
          "era": [Function],
          "month": [Function],
          "ordinalNumber": [Function],
          "quarter": [Function],
        },
        "options": {
          "firstWeekContainsDate": 1,
          "weekStartsOn": 0,
        },
      }
    }
    onClickItem={[MockFunction]}
    palette={
      {
        "backgroundColors": {
          "accountNavigation": "#FFFFFF",
          "altWhite": "#FFFFFF",
          "autosExpression": "#ffffff",
          "background": "#FAFAFA",
          "black": "#000000",
          "blue400": "#4299E1",
          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
          "client": "#E0E0E0",
          "createNew": "#FFFFFF",
          "darkgray1": "#777777",
          "darkgray2": "#454545",
          "darkgray3": "#424242",
          "dropdown": "#FFFFFF",
          "editorElement": "#1286FA",
          "editorRepeatable": "#5C50E7",
          "editorRow": "#63B8C8",
          "error": "#FCE2E2",
          "errorIcon": "#DB1D1D",
          "gray1": "#E0E0E0",
          "gray100": "#F0F0F0",
          "gray2": "#E7E7E7",
          "grayAlpha": "rgba(0,0,0,0.17)",
          "grayAlpha100": "rgba(0,0,0,0.06)",
          "grayAlpha400": "rgba(0,0,0,0.36)",
          "green600": "#2F855A",
          "info": "#E8E6FB",
          "infoIcon": "#5548D9",
          "inverseText": "#212121",
          "medgray1": "#757575",
          "medgray2": "#888888",
          "menuDark": "#21262A",
          "menuLight": "#2E3841",
          "orange400": "#ED8936",
          "pink400": "#ED64A6",
          "primary1": "#5548D9",
          "primary2": "#212121",
          "primary3": "#00796B",
          "primary4": "#D32F2F",
          "primary5": "#f0b941",
          "purple400": "#9f7aea",
          "red400": "#f56565",
          "red600": "#C53030",
          "secondary1": "#2E7D32",
          "secondary2": "#757575",
          "secondary3": "#673AB7",
          "secondary4": "#9C27B0",
          "secondary5": "#00796B",
          "secondary6": "#ECF0FC",
          "submenu": "#FFFFFF",
          "success": "#C2F2EA",
          "successIcon": "#007E6A",
          "teal400": "#38B2AC",
          "teal500": "#02999A",
          "text": "#212121",
          "warning": "#FFE9BB",
          "warningIcon": "#B2551F",
          "white": "#FFFFFF",
        },
        "borderColors": {
          "accountNavigation": "#FFFFFF",
          "altWhite": "#FFFFFF",
          "autosExpression": "#ffffff",
          "background": "#FAFAFA",
          "black": "#000000",
          "blue400": "#4299E1",
          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
          "client": "#E0E0E0",
          "createNew": "#FFFFFF",
          "darkgray1": "#777777",
          "darkgray2": "#454545",
          "darkgray3": "#424242",
          "dropdown": "#FFFFFF",
          "editorElement": "#1286FA",
          "editorRepeatable": "#5C50E7",
          "editorRow": "#63B8C8",
          "error": "#FCE2E2",
          "errorIcon": "#DB1D1D",
          "gray1": "#E0E0E0",
          "gray100": "#F0F0F0",
          "gray2": "#E7E7E7",
          "grayAlpha": "rgba(0,0,0,0.17)",
          "grayAlpha100": "rgba(0,0,0,0.06)",
          "grayAlpha400": "rgba(0,0,0,0.36)",
          "green600": "#2F855A",
          "info": "#E8E6FB",
          "infoIcon": "#5548D9",
          "inverseText": "#212121",
          "medgray1": "#757575",
          "medgray2": "#888888",
          "menuDark": "#21262A",
          "menuLight": "#2E3841",
          "orange400": "#ED8936",
          "pink400": "#ED64A6",
          "primary1": "#5548D9",
          "primary2": "#212121",
          "primary3": "#00796B",
          "primary4": "#D32F2F",
          "primary5": "#f0b941",
          "purple400": "#9f7aea",
          "red400": "#f56565",
          "red600": "#C53030",
          "secondary1": "#2E7D32",
          "secondary2": "#757575",
          "secondary3": "#673AB7",
          "secondary4": "#9C27B0",
          "secondary5": "#00796B",
          "secondary6": "#ECF0FC",
          "submenu": "#FFFFFF",
          "success": "#C2F2EA",
          "successIcon": "#007E6A",
          "teal400": "#38B2AC",
          "teal500": "#02999A",
          "text": "#212121",
          "warning": "#FFE9BB",
          "warningIcon": "#B2551F",
          "white": "#FFFFFF",
        },
        "fontColors": {
          "accountNavigation": "#FFFFFF",
          "altWhite": "#FFFFFF",
          "autosExpression": "#ffffff",
          "background": "#FAFAFA",
          "black": "#000000",
          "blue400": "#4299E1",
          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
          "client": "#E0E0E0",
          "createNew": "#212121",
          "darkgray1": "#777777",
          "darkgray2": "#454545",
          "darkgray3": "#424242",
          "dropdown": "#212121",
          "editorElement": "#1286FA",
          "editorRepeatable": "#5C50E7",
          "editorRow": "#63B8C8",
          "error": "#FCE2E2",
          "errorIcon": "#DB1D1D",
          "gray1": "#E0E0E0",
          "gray100": "#F0F0F0",
          "gray2": "#E7E7E7",
          "grayAlpha": "rgba(0,0,0,0.17)",
          "grayAlpha100": "rgba(0,0,0,0.06)",
          "grayAlpha400": "rgba(0,0,0,0.36)",
          "green600": "#2F855A",
          "info": "#E8E6FB",
          "infoIcon": "#5548D9",
          "inverseText": "#212121",
          "medgray1": "#757575",
          "medgray2": "#888888",
          "menuDark": "#21262A",
          "menuLight": "#2E3841",
          "orange400": "#ED8936",
          "pink400": "#ED64A6",
          "primary1": "#5548D9",
          "primary2": "#212121",
          "primary3": "#00796B",
          "primary4": "#D32F2F",
          "primary5": "#f0b941",
          "purple400": "#9f7aea",
          "red400": "#f56565",
          "red600": "#C53030",
          "secondary1": "#2E7D32",
          "secondary2": "#757575",
          "secondary3": "#673AB7",
          "secondary4": "#9C27B0",
          "secondary5": "#00796B",
          "secondary6": "#ECF0FC",
          "submenu": "#FFFFFF",
          "success": "#C2F2EA",
          "successIcon": "#007E6A",
          "teal400": "#38B2AC",
          "teal500": "#02999A",
          "text": "#212121",
          "warning": "#FFE9BB",
          "warningIcon": "#B2551F",
          "white": "#FFFFFF",
        },
        "reportColors": {
          "bounceChart": "#eccb4c",
          "box1": "#3fbaca",
          "box2": "#d84840",
          "box3": "#293346",
          "box4": "#F0B941",
          "box5": "#293346",
          "box6": "#3fbaca",
          "box7": "#F0B941",
          "box8": "#d84840",
          "circleChart1": "#3fbaca",
          "circleChart2": "#d84840",
          "circleChart3": "#E0E0E0",
          "lowChart": "#d3d3d3",
          "restChart1": "#3fbaca",
          "restChart10": "#4262e1",
          "restChart11": "#d5b9f9",
          "restChart12": "#eb8838",
          "restChart2": "#d84840",
          "restChart3": "#E0E0E0",
          "restChart4": "#F0B941",
          "restChart5": "#293346",
          "restChart6": "#d3d3d3",
          "restChart7": "#f4ad55",
          "restChart8": "#f9b3ce",
          "restChart9": "#40b4ac",
          "text": "1A1A1A",
          "unsubChart": "#FC8181",
        },
        "styles": {
          "buttonBorderRadius": "100px",
        },
      }
    }
    setLocale={[Function]}
  >
    <Transition
      addEndListener={[Function]}
      appear={false}
      enter={true}
      exit={true}
      in={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      timeout={145}
      unmountOnExit={true}
    />
  </Component>
</ActionsDropdown>
`;

exports[`ActionsDropdown renders ActionsDropdownItem correctly 1`] = `
<ActionsDropdownItem
  className="myClass"
  onClick={[MockFunction]}
  style={
    {
      "color": "blue",
    }
  }
>
  <Component
    className="myClass"
    locale={
      {
        "code": "en-US",
        "formatDistance": [Function],
        "formatLong": {
          "date": [Function],
          "dateTime": [Function],
          "time": [Function],
        },
        "formatRelative": [Function],
        "localize": {
          "day": [Function],
          "dayPeriod": [Function],
          "era": [Function],
          "month": [Function],
          "ordinalNumber": [Function],
          "quarter": [Function],
        },
        "match": {
          "day": [Function],
          "dayPeriod": [Function],
          "era": [Function],
          "month": [Function],
          "ordinalNumber": [Function],
          "quarter": [Function],
        },
        "options": {
          "firstWeekContainsDate": 1,
          "weekStartsOn": 0,
        },
      }
    }
    onClick={[MockFunction]}
    palette={
      {
        "backgroundColors": {
          "accountNavigation": "#FFFFFF",
          "altWhite": "#FFFFFF",
          "autosExpression": "#ffffff",
          "background": "#FAFAFA",
          "black": "#000000",
          "blue400": "#4299E1",
          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
          "client": "#E0E0E0",
          "createNew": "#FFFFFF",
          "darkgray1": "#777777",
          "darkgray2": "#454545",
          "darkgray3": "#424242",
          "dropdown": "#FFFFFF",
          "editorElement": "#1286FA",
          "editorRepeatable": "#5C50E7",
          "editorRow": "#63B8C8",
          "error": "#FCE2E2",
          "errorIcon": "#DB1D1D",
          "gray1": "#E0E0E0",
          "gray100": "#F0F0F0",
          "gray2": "#E7E7E7",
          "grayAlpha": "rgba(0,0,0,0.17)",
          "grayAlpha100": "rgba(0,0,0,0.06)",
          "grayAlpha400": "rgba(0,0,0,0.36)",
          "green600": "#2F855A",
          "info": "#E8E6FB",
          "infoIcon": "#5548D9",
          "inverseText": "#212121",
          "medgray1": "#757575",
          "medgray2": "#888888",
          "menuDark": "#21262A",
          "menuLight": "#2E3841",
          "orange400": "#ED8936",
          "pink400": "#ED64A6",
          "primary1": "#5548D9",
          "primary2": "#212121",
          "primary3": "#00796B",
          "primary4": "#D32F2F",
          "primary5": "#f0b941",
          "purple400": "#9f7aea",
          "red400": "#f56565",
          "red600": "#C53030",
          "secondary1": "#2E7D32",
          "secondary2": "#757575",
          "secondary3": "#673AB7",
          "secondary4": "#9C27B0",
          "secondary5": "#00796B",
          "secondary6": "#ECF0FC",
          "submenu": "#FFFFFF",
          "success": "#C2F2EA",
          "successIcon": "#007E6A",
          "teal400": "#38B2AC",
          "teal500": "#02999A",
          "text": "#212121",
          "warning": "#FFE9BB",
          "warningIcon": "#B2551F",
          "white": "#FFFFFF",
        },
        "borderColors": {
          "accountNavigation": "#FFFFFF",
          "altWhite": "#FFFFFF",
          "autosExpression": "#ffffff",
          "background": "#FAFAFA",
          "black": "#000000",
          "blue400": "#4299E1",
          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
          "client": "#E0E0E0",
          "createNew": "#FFFFFF",
          "darkgray1": "#777777",
          "darkgray2": "#454545",
          "darkgray3": "#424242",
          "dropdown": "#FFFFFF",
          "editorElement": "#1286FA",
          "editorRepeatable": "#5C50E7",
          "editorRow": "#63B8C8",
          "error": "#FCE2E2",
          "errorIcon": "#DB1D1D",
          "gray1": "#E0E0E0",
          "gray100": "#F0F0F0",
          "gray2": "#E7E7E7",
          "grayAlpha": "rgba(0,0,0,0.17)",
          "grayAlpha100": "rgba(0,0,0,0.06)",
          "grayAlpha400": "rgba(0,0,0,0.36)",
          "green600": "#2F855A",
          "info": "#E8E6FB",
          "infoIcon": "#5548D9",
          "inverseText": "#212121",
          "medgray1": "#757575",
          "medgray2": "#888888",
          "menuDark": "#21262A",
          "menuLight": "#2E3841",
          "orange400": "#ED8936",
          "pink400": "#ED64A6",
          "primary1": "#5548D9",
          "primary2": "#212121",
          "primary3": "#00796B",
          "primary4": "#D32F2F",
          "primary5": "#f0b941",
          "purple400": "#9f7aea",
          "red400": "#f56565",
          "red600": "#C53030",
          "secondary1": "#2E7D32",
          "secondary2": "#757575",
          "secondary3": "#673AB7",
          "secondary4": "#9C27B0",
          "secondary5": "#00796B",
          "secondary6": "#ECF0FC",
          "submenu": "#FFFFFF",
          "success": "#C2F2EA",
          "successIcon": "#007E6A",
          "teal400": "#38B2AC",
          "teal500": "#02999A",
          "text": "#212121",
          "warning": "#FFE9BB",
          "warningIcon": "#B2551F",
          "white": "#FFFFFF",
        },
        "fontColors": {
          "accountNavigation": "#FFFFFF",
          "altWhite": "#FFFFFF",
          "autosExpression": "#ffffff",
          "background": "#FAFAFA",
          "black": "#000000",
          "blue400": "#4299E1",
          "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
          "client": "#E0E0E0",
          "createNew": "#212121",
          "darkgray1": "#777777",
          "darkgray2": "#454545",
          "darkgray3": "#424242",
          "dropdown": "#212121",
          "editorElement": "#1286FA",
          "editorRepeatable": "#5C50E7",
          "editorRow": "#63B8C8",
          "error": "#FCE2E2",
          "errorIcon": "#DB1D1D",
          "gray1": "#E0E0E0",
          "gray100": "#F0F0F0",
          "gray2": "#E7E7E7",
          "grayAlpha": "rgba(0,0,0,0.17)",
          "grayAlpha100": "rgba(0,0,0,0.06)",
          "grayAlpha400": "rgba(0,0,0,0.36)",
          "green600": "#2F855A",
          "info": "#E8E6FB",
          "infoIcon": "#5548D9",
          "inverseText": "#212121",
          "medgray1": "#757575",
          "medgray2": "#888888",
          "menuDark": "#21262A",
          "menuLight": "#2E3841",
          "orange400": "#ED8936",
          "pink400": "#ED64A6",
          "primary1": "#5548D9",
          "primary2": "#212121",
          "primary3": "#00796B",
          "primary4": "#D32F2F",
          "primary5": "#f0b941",
          "purple400": "#9f7aea",
          "red400": "#f56565",
          "red600": "#C53030",
          "secondary1": "#2E7D32",
          "secondary2": "#757575",
          "secondary3": "#673AB7",
          "secondary4": "#9C27B0",
          "secondary5": "#00796B",
          "secondary6": "#ECF0FC",
          "submenu": "#FFFFFF",
          "success": "#C2F2EA",
          "successIcon": "#007E6A",
          "teal400": "#38B2AC",
          "teal500": "#02999A",
          "text": "#212121",
          "warning": "#FFE9BB",
          "warningIcon": "#B2551F",
          "white": "#FFFFFF",
        },
        "reportColors": {
          "bounceChart": "#eccb4c",
          "box1": "#3fbaca",
          "box2": "#d84840",
          "box3": "#293346",
          "box4": "#F0B941",
          "box5": "#293346",
          "box6": "#3fbaca",
          "box7": "#F0B941",
          "box8": "#d84840",
          "circleChart1": "#3fbaca",
          "circleChart2": "#d84840",
          "circleChart3": "#E0E0E0",
          "lowChart": "#d3d3d3",
          "restChart1": "#3fbaca",
          "restChart10": "#4262e1",
          "restChart11": "#d5b9f9",
          "restChart12": "#eb8838",
          "restChart2": "#d84840",
          "restChart3": "#E0E0E0",
          "restChart4": "#F0B941",
          "restChart5": "#293346",
          "restChart6": "#d3d3d3",
          "restChart7": "#f4ad55",
          "restChart8": "#f9b3ce",
          "restChart9": "#40b4ac",
          "text": "1A1A1A",
          "unsubChart": "#FC8181",
        },
        "styles": {
          "buttonBorderRadius": "100px",
        },
      }
    }
    setLocale={[Function]}
    style={
      {
        "color": "blue",
      }
    }
  >
    <StyledActionsDropdownItem
      className="myClass"
      fontSize={
        [
          "12px",
          "12px",
          "20px",
          "20px",
        ]
      }
      fontWeight={
        [
          "bold",
          "bold",
          400,
          400,
        ]
      }
      locale={
        {
          "code": "en-US",
          "formatDistance": [Function],
          "formatLong": {
            "date": [Function],
            "dateTime": [Function],
            "time": [Function],
          },
          "formatRelative": [Function],
          "localize": {
            "day": [Function],
            "dayPeriod": [Function],
            "era": [Function],
            "month": [Function],
            "ordinalNumber": [Function],
            "quarter": [Function],
          },
          "match": {
            "day": [Function],
            "dayPeriod": [Function],
            "era": [Function],
            "month": [Function],
            "ordinalNumber": [Function],
            "quarter": [Function],
          },
          "options": {
            "firstWeekContainsDate": 1,
            "weekStartsOn": 0,
          },
        }
      }
      onClick={[MockFunction]}
      p={
        [
          "",
          "",
          "16px 16px 16px",
          "16px 16px 16px",
        ]
      }
      palette={
        {
          "backgroundColors": {
            "accountNavigation": "#FFFFFF",
            "altWhite": "#FFFFFF",
            "autosExpression": "#ffffff",
            "background": "#FAFAFA",
            "black": "#000000",
            "blue400": "#4299E1",
            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
            "client": "#E0E0E0",
            "createNew": "#FFFFFF",
            "darkgray1": "#777777",
            "darkgray2": "#454545",
            "darkgray3": "#424242",
            "dropdown": "#FFFFFF",
            "editorElement": "#1286FA",
            "editorRepeatable": "#5C50E7",
            "editorRow": "#63B8C8",
            "error": "#FCE2E2",
            "errorIcon": "#DB1D1D",
            "gray1": "#E0E0E0",
            "gray100": "#F0F0F0",
            "gray2": "#E7E7E7",
            "grayAlpha": "rgba(0,0,0,0.17)",
            "grayAlpha100": "rgba(0,0,0,0.06)",
            "grayAlpha400": "rgba(0,0,0,0.36)",
            "green600": "#2F855A",
            "info": "#E8E6FB",
            "infoIcon": "#5548D9",
            "inverseText": "#212121",
            "medgray1": "#757575",
            "medgray2": "#888888",
            "menuDark": "#21262A",
            "menuLight": "#2E3841",
            "orange400": "#ED8936",
            "pink400": "#ED64A6",
            "primary1": "#5548D9",
            "primary2": "#212121",
            "primary3": "#00796B",
            "primary4": "#D32F2F",
            "primary5": "#f0b941",
            "purple400": "#9f7aea",
            "red400": "#f56565",
            "red600": "#C53030",
            "secondary1": "#2E7D32",
            "secondary2": "#757575",
            "secondary3": "#673AB7",
            "secondary4": "#9C27B0",
            "secondary5": "#00796B",
            "secondary6": "#ECF0FC",
            "submenu": "#FFFFFF",
            "success": "#C2F2EA",
            "successIcon": "#007E6A",
            "teal400": "#38B2AC",
            "teal500": "#02999A",
            "text": "#212121",
            "warning": "#FFE9BB",
            "warningIcon": "#B2551F",
            "white": "#FFFFFF",
          },
          "borderColors": {
            "accountNavigation": "#FFFFFF",
            "altWhite": "#FFFFFF",
            "autosExpression": "#ffffff",
            "background": "#FAFAFA",
            "black": "#000000",
            "blue400": "#4299E1",
            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
            "client": "#E0E0E0",
            "createNew": "#FFFFFF",
            "darkgray1": "#777777",
            "darkgray2": "#454545",
            "darkgray3": "#424242",
            "dropdown": "#FFFFFF",
            "editorElement": "#1286FA",
            "editorRepeatable": "#5C50E7",
            "editorRow": "#63B8C8",
            "error": "#FCE2E2",
            "errorIcon": "#DB1D1D",
            "gray1": "#E0E0E0",
            "gray100": "#F0F0F0",
            "gray2": "#E7E7E7",
            "grayAlpha": "rgba(0,0,0,0.17)",
            "grayAlpha100": "rgba(0,0,0,0.06)",
            "grayAlpha400": "rgba(0,0,0,0.36)",
            "green600": "#2F855A",
            "info": "#E8E6FB",
            "infoIcon": "#5548D9",
            "inverseText": "#212121",
            "medgray1": "#757575",
            "medgray2": "#888888",
            "menuDark": "#21262A",
            "menuLight": "#2E3841",
            "orange400": "#ED8936",
            "pink400": "#ED64A6",
            "primary1": "#5548D9",
            "primary2": "#212121",
            "primary3": "#00796B",
            "primary4": "#D32F2F",
            "primary5": "#f0b941",
            "purple400": "#9f7aea",
            "red400": "#f56565",
            "red600": "#C53030",
            "secondary1": "#2E7D32",
            "secondary2": "#757575",
            "secondary3": "#673AB7",
            "secondary4": "#9C27B0",
            "secondary5": "#00796B",
            "secondary6": "#ECF0FC",
            "submenu": "#FFFFFF",
            "success": "#C2F2EA",
            "successIcon": "#007E6A",
            "teal400": "#38B2AC",
            "teal500": "#02999A",
            "text": "#212121",
            "warning": "#FFE9BB",
            "warningIcon": "#B2551F",
            "white": "#FFFFFF",
          },
          "fontColors": {
            "accountNavigation": "#FFFFFF",
            "altWhite": "#FFFFFF",
            "autosExpression": "#ffffff",
            "background": "#FAFAFA",
            "black": "#000000",
            "blue400": "#4299E1",
            "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
            "client": "#E0E0E0",
            "createNew": "#212121",
            "darkgray1": "#777777",
            "darkgray2": "#454545",
            "darkgray3": "#424242",
            "dropdown": "#212121",
            "editorElement": "#1286FA",
            "editorRepeatable": "#5C50E7",
            "editorRow": "#63B8C8",
            "error": "#FCE2E2",
            "errorIcon": "#DB1D1D",
            "gray1": "#E0E0E0",
            "gray100": "#F0F0F0",
            "gray2": "#E7E7E7",
            "grayAlpha": "rgba(0,0,0,0.17)",
            "grayAlpha100": "rgba(0,0,0,0.06)",
            "grayAlpha400": "rgba(0,0,0,0.36)",
            "green600": "#2F855A",
            "info": "#E8E6FB",
            "infoIcon": "#5548D9",
            "inverseText": "#212121",
            "medgray1": "#757575",
            "medgray2": "#888888",
            "menuDark": "#21262A",
            "menuLight": "#2E3841",
            "orange400": "#ED8936",
            "pink400": "#ED64A6",
            "primary1": "#5548D9",
            "primary2": "#212121",
            "primary3": "#00796B",
            "primary4": "#D32F2F",
            "primary5": "#f0b941",
            "purple400": "#9f7aea",
            "red400": "#f56565",
            "red600": "#C53030",
            "secondary1": "#2E7D32",
            "secondary2": "#757575",
            "secondary3": "#673AB7",
            "secondary4": "#9C27B0",
            "secondary5": "#00796B",
            "secondary6": "#ECF0FC",
            "submenu": "#FFFFFF",
            "success": "#C2F2EA",
            "successIcon": "#007E6A",
            "teal400": "#38B2AC",
            "teal500": "#02999A",
            "text": "#212121",
            "warning": "#FFE9BB",
            "warningIcon": "#B2551F",
            "white": "#FFFFFF",
          },
          "reportColors": {
            "bounceChart": "#eccb4c",
            "box1": "#3fbaca",
            "box2": "#d84840",
            "box3": "#293346",
            "box4": "#F0B941",
            "box5": "#293346",
            "box6": "#3fbaca",
            "box7": "#F0B941",
            "box8": "#d84840",
            "circleChart1": "#3fbaca",
            "circleChart2": "#d84840",
            "circleChart3": "#E0E0E0",
            "lowChart": "#d3d3d3",
            "restChart1": "#3fbaca",
            "restChart10": "#4262e1",
            "restChart11": "#d5b9f9",
            "restChart12": "#eb8838",
            "restChart2": "#d84840",
            "restChart3": "#E0E0E0",
            "restChart4": "#F0B941",
            "restChart5": "#293346",
            "restChart6": "#d3d3d3",
            "restChart7": "#f4ad55",
            "restChart8": "#f9b3ce",
            "restChart9": "#40b4ac",
            "text": "1A1A1A",
            "unsubChart": "#FC8181",
          },
          "styles": {
            "buttonBorderRadius": "100px",
          },
        }
      }
      setLocale={[Function]}
      textAlign={
        [
          "unset",
          "unset",
          "center",
          "center",
        ]
      }
    >
      <Box
        className="sc-dcJsrY etKzq myClass"
        fontSize={
          [
            "12px",
            "12px",
            "20px",
            "20px",
          ]
        }
        fontWeight={
          [
            "bold",
            "bold",
            400,
            400,
          ]
        }
        locale={
          {
            "code": "en-US",
            "formatDistance": [Function],
            "formatLong": {
              "date": [Function],
              "dateTime": [Function],
              "time": [Function],
            },
            "formatRelative": [Function],
            "localize": {
              "day": [Function],
              "dayPeriod": [Function],
              "era": [Function],
              "month": [Function],
              "ordinalNumber": [Function],
              "quarter": [Function],
            },
            "match": {
              "day": [Function],
              "dayPeriod": [Function],
              "era": [Function],
              "month": [Function],
              "ordinalNumber": [Function],
              "quarter": [Function],
            },
            "options": {
              "firstWeekContainsDate": 1,
              "weekStartsOn": 0,
            },
          }
        }
        onClick={[MockFunction]}
        p={
          [
            "",
            "",
            "16px 16px 16px",
            "16px 16px 16px",
          ]
        }
        palette={
          {
            "backgroundColors": {
              "accountNavigation": "#FFFFFF",
              "altWhite": "#FFFFFF",
              "autosExpression": "#ffffff",
              "background": "#FAFAFA",
              "black": "#000000",
              "blue400": "#4299E1",
              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
              "client": "#E0E0E0",
              "createNew": "#FFFFFF",
              "darkgray1": "#777777",
              "darkgray2": "#454545",
              "darkgray3": "#424242",
              "dropdown": "#FFFFFF",
              "editorElement": "#1286FA",
              "editorRepeatable": "#5C50E7",
              "editorRow": "#63B8C8",
              "error": "#FCE2E2",
              "errorIcon": "#DB1D1D",
              "gray1": "#E0E0E0",
              "gray100": "#F0F0F0",
              "gray2": "#E7E7E7",
              "grayAlpha": "rgba(0,0,0,0.17)",
              "grayAlpha100": "rgba(0,0,0,0.06)",
              "grayAlpha400": "rgba(0,0,0,0.36)",
              "green600": "#2F855A",
              "info": "#E8E6FB",
              "infoIcon": "#5548D9",
              "inverseText": "#212121",
              "medgray1": "#757575",
              "medgray2": "#888888",
              "menuDark": "#21262A",
              "menuLight": "#2E3841",
              "orange400": "#ED8936",
              "pink400": "#ED64A6",
              "primary1": "#5548D9",
              "primary2": "#212121",
              "primary3": "#00796B",
              "primary4": "#D32F2F",
              "primary5": "#f0b941",
              "purple400": "#9f7aea",
              "red400": "#f56565",
              "red600": "#C53030",
              "secondary1": "#2E7D32",
              "secondary2": "#757575",
              "secondary3": "#673AB7",
              "secondary4": "#9C27B0",
              "secondary5": "#00796B",
              "secondary6": "#ECF0FC",
              "submenu": "#FFFFFF",
              "success": "#C2F2EA",
              "successIcon": "#007E6A",
              "teal400": "#38B2AC",
              "teal500": "#02999A",
              "text": "#212121",
              "warning": "#FFE9BB",
              "warningIcon": "#B2551F",
              "white": "#FFFFFF",
            },
            "borderColors": {
              "accountNavigation": "#FFFFFF",
              "altWhite": "#FFFFFF",
              "autosExpression": "#ffffff",
              "background": "#FAFAFA",
              "black": "#000000",
              "blue400": "#4299E1",
              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
              "client": "#E0E0E0",
              "createNew": "#FFFFFF",
              "darkgray1": "#777777",
              "darkgray2": "#454545",
              "darkgray3": "#424242",
              "dropdown": "#FFFFFF",
              "editorElement": "#1286FA",
              "editorRepeatable": "#5C50E7",
              "editorRow": "#63B8C8",
              "error": "#FCE2E2",
              "errorIcon": "#DB1D1D",
              "gray1": "#E0E0E0",
              "gray100": "#F0F0F0",
              "gray2": "#E7E7E7",
              "grayAlpha": "rgba(0,0,0,0.17)",
              "grayAlpha100": "rgba(0,0,0,0.06)",
              "grayAlpha400": "rgba(0,0,0,0.36)",
              "green600": "#2F855A",
              "info": "#E8E6FB",
              "infoIcon": "#5548D9",
              "inverseText": "#212121",
              "medgray1": "#757575",
              "medgray2": "#888888",
              "menuDark": "#21262A",
              "menuLight": "#2E3841",
              "orange400": "#ED8936",
              "pink400": "#ED64A6",
              "primary1": "#5548D9",
              "primary2": "#212121",
              "primary3": "#00796B",
              "primary4": "#D32F2F",
              "primary5": "#f0b941",
              "purple400": "#9f7aea",
              "red400": "#f56565",
              "red600": "#C53030",
              "secondary1": "#2E7D32",
              "secondary2": "#757575",
              "secondary3": "#673AB7",
              "secondary4": "#9C27B0",
              "secondary5": "#00796B",
              "secondary6": "#ECF0FC",
              "submenu": "#FFFFFF",
              "success": "#C2F2EA",
              "successIcon": "#007E6A",
              "teal400": "#38B2AC",
              "teal500": "#02999A",
              "text": "#212121",
              "warning": "#FFE9BB",
              "warningIcon": "#B2551F",
              "white": "#FFFFFF",
            },
            "fontColors": {
              "accountNavigation": "#FFFFFF",
              "altWhite": "#FFFFFF",
              "autosExpression": "#ffffff",
              "background": "#FAFAFA",
              "black": "#000000",
              "blue400": "#4299E1",
              "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
              "client": "#E0E0E0",
              "createNew": "#212121",
              "darkgray1": "#777777",
              "darkgray2": "#454545",
              "darkgray3": "#424242",
              "dropdown": "#212121",
              "editorElement": "#1286FA",
              "editorRepeatable": "#5C50E7",
              "editorRow": "#63B8C8",
              "error": "#FCE2E2",
              "errorIcon": "#DB1D1D",
              "gray1": "#E0E0E0",
              "gray100": "#F0F0F0",
              "gray2": "#E7E7E7",
              "grayAlpha": "rgba(0,0,0,0.17)",
              "grayAlpha100": "rgba(0,0,0,0.06)",
              "grayAlpha400": "rgba(0,0,0,0.36)",
              "green600": "#2F855A",
              "info": "#E8E6FB",
              "infoIcon": "#5548D9",
              "inverseText": "#212121",
              "medgray1": "#757575",
              "medgray2": "#888888",
              "menuDark": "#21262A",
              "menuLight": "#2E3841",
              "orange400": "#ED8936",
              "pink400": "#ED64A6",
              "primary1": "#5548D9",
              "primary2": "#212121",
              "primary3": "#00796B",
              "primary4": "#D32F2F",
              "primary5": "#f0b941",
              "purple400": "#9f7aea",
              "red400": "#f56565",
              "red600": "#C53030",
              "secondary1": "#2E7D32",
              "secondary2": "#757575",
              "secondary3": "#673AB7",
              "secondary4": "#9C27B0",
              "secondary5": "#00796B",
              "secondary6": "#ECF0FC",
              "submenu": "#FFFFFF",
              "success": "#C2F2EA",
              "successIcon": "#007E6A",
              "teal400": "#38B2AC",
              "teal500": "#02999A",
              "text": "#212121",
              "warning": "#FFE9BB",
              "warningIcon": "#B2551F",
              "white": "#FFFFFF",
            },
            "reportColors": {
              "bounceChart": "#eccb4c",
              "box1": "#3fbaca",
              "box2": "#d84840",
              "box3": "#293346",
              "box4": "#F0B941",
              "box5": "#293346",
              "box6": "#3fbaca",
              "box7": "#F0B941",
              "box8": "#d84840",
              "circleChart1": "#3fbaca",
              "circleChart2": "#d84840",
              "circleChart3": "#E0E0E0",
              "lowChart": "#d3d3d3",
              "restChart1": "#3fbaca",
              "restChart10": "#4262e1",
              "restChart11": "#d5b9f9",
              "restChart12": "#eb8838",
              "restChart2": "#d84840",
              "restChart3": "#E0E0E0",
              "restChart4": "#F0B941",
              "restChart5": "#293346",
              "restChart6": "#d3d3d3",
              "restChart7": "#f4ad55",
              "restChart8": "#f9b3ce",
              "restChart9": "#40b4ac",
              "text": "1A1A1A",
              "unsubChart": "#FC8181",
            },
            "styles": {
              "buttonBorderRadius": "100px",
            },
          }
        }
        setLocale={[Function]}
        textAlign={
          [
            "unset",
            "unset",
            "center",
            "center",
          ]
        }
      >
        <Memo()
          className="sc-dcJsrY etKzq myClass"
          fontSize={
            [
              "12px",
              "12px",
              "20px",
              "20px",
            ]
          }
          fontWeight={
            [
              "bold",
              "bold",
              400,
              400,
            ]
          }
          locale={
            {
              "code": "en-US",
              "formatDistance": [Function],
              "formatLong": {
                "date": [Function],
                "dateTime": [Function],
                "time": [Function],
              },
              "formatRelative": [Function],
              "localize": {
                "day": [Function],
                "dayPeriod": [Function],
                "era": [Function],
                "month": [Function],
                "ordinalNumber": [Function],
                "quarter": [Function],
              },
              "match": {
                "day": [Function],
                "dayPeriod": [Function],
                "era": [Function],
                "month": [Function],
                "ordinalNumber": [Function],
                "quarter": [Function],
              },
              "options": {
                "firstWeekContainsDate": 1,
                "weekStartsOn": 0,
              },
            }
          }
          onClick={[MockFunction]}
          p={
            [
              "",
              "",
              "16px 16px 16px",
              "16px 16px 16px",
            ]
          }
          palette={
            {
              "backgroundColors": {
                "accountNavigation": "#FFFFFF",
                "altWhite": "#FFFFFF",
                "autosExpression": "#ffffff",
                "background": "#FAFAFA",
                "black": "#000000",
                "blue400": "#4299E1",
                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                "client": "#E0E0E0",
                "createNew": "#FFFFFF",
                "darkgray1": "#777777",
                "darkgray2": "#454545",
                "darkgray3": "#424242",
                "dropdown": "#FFFFFF",
                "editorElement": "#1286FA",
                "editorRepeatable": "#5C50E7",
                "editorRow": "#63B8C8",
                "error": "#FCE2E2",
                "errorIcon": "#DB1D1D",
                "gray1": "#E0E0E0",
                "gray100": "#F0F0F0",
                "gray2": "#E7E7E7",
                "grayAlpha": "rgba(0,0,0,0.17)",
                "grayAlpha100": "rgba(0,0,0,0.06)",
                "grayAlpha400": "rgba(0,0,0,0.36)",
                "green600": "#2F855A",
                "info": "#E8E6FB",
                "infoIcon": "#5548D9",
                "inverseText": "#212121",
                "medgray1": "#757575",
                "medgray2": "#888888",
                "menuDark": "#21262A",
                "menuLight": "#2E3841",
                "orange400": "#ED8936",
                "pink400": "#ED64A6",
                "primary1": "#5548D9",
                "primary2": "#212121",
                "primary3": "#00796B",
                "primary4": "#D32F2F",
                "primary5": "#f0b941",
                "purple400": "#9f7aea",
                "red400": "#f56565",
                "red600": "#C53030",
                "secondary1": "#2E7D32",
                "secondary2": "#757575",
                "secondary3": "#673AB7",
                "secondary4": "#9C27B0",
                "secondary5": "#00796B",
                "secondary6": "#ECF0FC",
                "submenu": "#FFFFFF",
                "success": "#C2F2EA",
                "successIcon": "#007E6A",
                "teal400": "#38B2AC",
                "teal500": "#02999A",
                "text": "#212121",
                "warning": "#FFE9BB",
                "warningIcon": "#B2551F",
                "white": "#FFFFFF",
              },
              "borderColors": {
                "accountNavigation": "#FFFFFF",
                "altWhite": "#FFFFFF",
                "autosExpression": "#ffffff",
                "background": "#FAFAFA",
                "black": "#000000",
                "blue400": "#4299E1",
                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                "client": "#E0E0E0",
                "createNew": "#FFFFFF",
                "darkgray1": "#777777",
                "darkgray2": "#454545",
                "darkgray3": "#424242",
                "dropdown": "#FFFFFF",
                "editorElement": "#1286FA",
                "editorRepeatable": "#5C50E7",
                "editorRow": "#63B8C8",
                "error": "#FCE2E2",
                "errorIcon": "#DB1D1D",
                "gray1": "#E0E0E0",
                "gray100": "#F0F0F0",
                "gray2": "#E7E7E7",
                "grayAlpha": "rgba(0,0,0,0.17)",
                "grayAlpha100": "rgba(0,0,0,0.06)",
                "grayAlpha400": "rgba(0,0,0,0.36)",
                "green600": "#2F855A",
                "info": "#E8E6FB",
                "infoIcon": "#5548D9",
                "inverseText": "#212121",
                "medgray1": "#757575",
                "medgray2": "#888888",
                "menuDark": "#21262A",
                "menuLight": "#2E3841",
                "orange400": "#ED8936",
                "pink400": "#ED64A6",
                "primary1": "#5548D9",
                "primary2": "#212121",
                "primary3": "#00796B",
                "primary4": "#D32F2F",
                "primary5": "#f0b941",
                "purple400": "#9f7aea",
                "red400": "#f56565",
                "red600": "#C53030",
                "secondary1": "#2E7D32",
                "secondary2": "#757575",
                "secondary3": "#673AB7",
                "secondary4": "#9C27B0",
                "secondary5": "#00796B",
                "secondary6": "#ECF0FC",
                "submenu": "#FFFFFF",
                "success": "#C2F2EA",
                "successIcon": "#007E6A",
                "teal400": "#38B2AC",
                "teal500": "#02999A",
                "text": "#212121",
                "warning": "#FFE9BB",
                "warningIcon": "#B2551F",
                "white": "#FFFFFF",
              },
              "fontColors": {
                "accountNavigation": "#FFFFFF",
                "altWhite": "#FFFFFF",
                "autosExpression": "#ffffff",
                "background": "#FAFAFA",
                "black": "#000000",
                "blue400": "#4299E1",
                "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                "client": "#E0E0E0",
                "createNew": "#212121",
                "darkgray1": "#777777",
                "darkgray2": "#454545",
                "darkgray3": "#424242",
                "dropdown": "#212121",
                "editorElement": "#1286FA",
                "editorRepeatable": "#5C50E7",
                "editorRow": "#63B8C8",
                "error": "#FCE2E2",
                "errorIcon": "#DB1D1D",
                "gray1": "#E0E0E0",
                "gray100": "#F0F0F0",
                "gray2": "#E7E7E7",
                "grayAlpha": "rgba(0,0,0,0.17)",
                "grayAlpha100": "rgba(0,0,0,0.06)",
                "grayAlpha400": "rgba(0,0,0,0.36)",
                "green600": "#2F855A",
                "info": "#E8E6FB",
                "infoIcon": "#5548D9",
                "inverseText": "#212121",
                "medgray1": "#757575",
                "medgray2": "#888888",
                "menuDark": "#21262A",
                "menuLight": "#2E3841",
                "orange400": "#ED8936",
                "pink400": "#ED64A6",
                "primary1": "#5548D9",
                "primary2": "#212121",
                "primary3": "#00796B",
                "primary4": "#D32F2F",
                "primary5": "#f0b941",
                "purple400": "#9f7aea",
                "red400": "#f56565",
                "red600": "#C53030",
                "secondary1": "#2E7D32",
                "secondary2": "#757575",
                "secondary3": "#673AB7",
                "secondary4": "#9C27B0",
                "secondary5": "#00796B",
                "secondary6": "#ECF0FC",
                "submenu": "#FFFFFF",
                "success": "#C2F2EA",
                "successIcon": "#007E6A",
                "teal400": "#38B2AC",
                "teal500": "#02999A",
                "text": "#212121",
                "warning": "#FFE9BB",
                "warningIcon": "#B2551F",
                "white": "#FFFFFF",
              },
              "reportColors": {
                "bounceChart": "#eccb4c",
                "box1": "#3fbaca",
                "box2": "#d84840",
                "box3": "#293346",
                "box4": "#F0B941",
                "box5": "#293346",
                "box6": "#3fbaca",
                "box7": "#F0B941",
                "box8": "#d84840",
                "circleChart1": "#3fbaca",
                "circleChart2": "#d84840",
                "circleChart3": "#E0E0E0",
                "lowChart": "#d3d3d3",
                "restChart1": "#3fbaca",
                "restChart10": "#4262e1",
                "restChart11": "#d5b9f9",
                "restChart12": "#eb8838",
                "restChart2": "#d84840",
                "restChart3": "#E0E0E0",
                "restChart4": "#F0B941",
                "restChart5": "#293346",
                "restChart6": "#d3d3d3",
                "restChart7": "#f4ad55",
                "restChart8": "#f9b3ce",
                "restChart9": "#40b4ac",
                "text": "1A1A1A",
                "unsubChart": "#FC8181",
              },
              "styles": {
                "buttonBorderRadius": "100px",
              },
            }
          }
          setLocale={[Function]}
          textAlign={
            [
              "unset",
              "unset",
              "center",
              "center",
            ]
          }
        >
          <StyledBox
            className="sc-dcJsrY etKzq myClass"
            fontSize={
              [
                "12px",
                "12px",
                "20px",
                "20px",
              ]
            }
            fontWeight={
              [
                "bold",
                "bold",
                400,
                400,
              ]
            }
            locale={
              {
                "code": "en-US",
                "formatDistance": [Function],
                "formatLong": {
                  "date": [Function],
                  "dateTime": [Function],
                  "time": [Function],
                },
                "formatRelative": [Function],
                "localize": {
                  "day": [Function],
                  "dayPeriod": [Function],
                  "era": [Function],
                  "month": [Function],
                  "ordinalNumber": [Function],
                  "quarter": [Function],
                },
                "match": {
                  "day": [Function],
                  "dayPeriod": [Function],
                  "era": [Function],
                  "month": [Function],
                  "ordinalNumber": [Function],
                  "quarter": [Function],
                },
                "options": {
                  "firstWeekContainsDate": 1,
                  "weekStartsOn": 0,
                },
              }
            }
            onClick={[MockFunction]}
            p={
              [
                "",
                "",
                "16px 16px 16px",
                "16px 16px 16px",
              ]
            }
            palette={
              {
                "backgroundColors": {
                  "accountNavigation": "#FFFFFF",
                  "altWhite": "#FFFFFF",
                  "autosExpression": "#ffffff",
                  "background": "#FAFAFA",
                  "black": "#000000",
                  "blue400": "#4299E1",
                  "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                  "client": "#E0E0E0",
                  "createNew": "#FFFFFF",
                  "darkgray1": "#777777",
                  "darkgray2": "#454545",
                  "darkgray3": "#424242",
                  "dropdown": "#FFFFFF",
                  "editorElement": "#1286FA",
                  "editorRepeatable": "#5C50E7",
                  "editorRow": "#63B8C8",
                  "error": "#FCE2E2",
                  "errorIcon": "#DB1D1D",
                  "gray1": "#E0E0E0",
                  "gray100": "#F0F0F0",
                  "gray2": "#E7E7E7",
                  "grayAlpha": "rgba(0,0,0,0.17)",
                  "grayAlpha100": "rgba(0,0,0,0.06)",
                  "grayAlpha400": "rgba(0,0,0,0.36)",
                  "green600": "#2F855A",
                  "info": "#E8E6FB",
                  "infoIcon": "#5548D9",
                  "inverseText": "#212121",
                  "medgray1": "#757575",
                  "medgray2": "#888888",
                  "menuDark": "#21262A",
                  "menuLight": "#2E3841",
                  "orange400": "#ED8936",
                  "pink400": "#ED64A6",
                  "primary1": "#5548D9",
                  "primary2": "#212121",
                  "primary3": "#00796B",
                  "primary4": "#D32F2F",
                  "primary5": "#f0b941",
                  "purple400": "#9f7aea",
                  "red400": "#f56565",
                  "red600": "#C53030",
                  "secondary1": "#2E7D32",
                  "secondary2": "#757575",
                  "secondary3": "#673AB7",
                  "secondary4": "#9C27B0",
                  "secondary5": "#00796B",
                  "secondary6": "#ECF0FC",
                  "submenu": "#FFFFFF",
                  "success": "#C2F2EA",
                  "successIcon": "#007E6A",
                  "teal400": "#38B2AC",
                  "teal500": "#02999A",
                  "text": "#212121",
                  "warning": "#FFE9BB",
                  "warningIcon": "#B2551F",
                  "white": "#FFFFFF",
                },
                "borderColors": {
                  "accountNavigation": "#FFFFFF",
                  "altWhite": "#FFFFFF",
                  "autosExpression": "#ffffff",
                  "background": "#FAFAFA",
                  "black": "#000000",
                  "blue400": "#4299E1",
                  "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                  "client": "#E0E0E0",
                  "createNew": "#FFFFFF",
                  "darkgray1": "#777777",
                  "darkgray2": "#454545",
                  "darkgray3": "#424242",
                  "dropdown": "#FFFFFF",
                  "editorElement": "#1286FA",
                  "editorRepeatable": "#5C50E7",
                  "editorRow": "#63B8C8",
                  "error": "#FCE2E2",
                  "errorIcon": "#DB1D1D",
                  "gray1": "#E0E0E0",
                  "gray100": "#F0F0F0",
                  "gray2": "#E7E7E7",
                  "grayAlpha": "rgba(0,0,0,0.17)",
                  "grayAlpha100": "rgba(0,0,0,0.06)",
                  "grayAlpha400": "rgba(0,0,0,0.36)",
                  "green600": "#2F855A",
                  "info": "#E8E6FB",
                  "infoIcon": "#5548D9",
                  "inverseText": "#212121",
                  "medgray1": "#757575",
                  "medgray2": "#888888",
                  "menuDark": "#21262A",
                  "menuLight": "#2E3841",
                  "orange400": "#ED8936",
                  "pink400": "#ED64A6",
                  "primary1": "#5548D9",
                  "primary2": "#212121",
                  "primary3": "#00796B",
                  "primary4": "#D32F2F",
                  "primary5": "#f0b941",
                  "purple400": "#9f7aea",
                  "red400": "#f56565",
                  "red600": "#C53030",
                  "secondary1": "#2E7D32",
                  "secondary2": "#757575",
                  "secondary3": "#673AB7",
                  "secondary4": "#9C27B0",
                  "secondary5": "#00796B",
                  "secondary6": "#ECF0FC",
                  "submenu": "#FFFFFF",
                  "success": "#C2F2EA",
                  "successIcon": "#007E6A",
                  "teal400": "#38B2AC",
                  "teal500": "#02999A",
                  "text": "#212121",
                  "warning": "#FFE9BB",
                  "warningIcon": "#B2551F",
                  "white": "#FFFFFF",
                },
                "fontColors": {
                  "accountNavigation": "#FFFFFF",
                  "altWhite": "#FFFFFF",
                  "autosExpression": "#ffffff",
                  "background": "#FAFAFA",
                  "black": "#000000",
                  "blue400": "#4299E1",
                  "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
                  "client": "#E0E0E0",
                  "createNew": "#212121",
                  "darkgray1": "#777777",
                  "darkgray2": "#454545",
                  "darkgray3": "#424242",
                  "dropdown": "#212121",
                  "editorElement": "#1286FA",
                  "editorRepeatable": "#5C50E7",
                  "editorRow": "#63B8C8",
                  "error": "#FCE2E2",
                  "errorIcon": "#DB1D1D",
                  "gray1": "#E0E0E0",
                  "gray100": "#F0F0F0",
                  "gray2": "#E7E7E7",
                  "grayAlpha": "rgba(0,0,0,0.17)",
                  "grayAlpha100": "rgba(0,0,0,0.06)",
                  "grayAlpha400": "rgba(0,0,0,0.36)",
                  "green600": "#2F855A",
                  "info": "#E8E6FB",
                  "infoIcon": "#5548D9",
                  "inverseText": "#212121",
                  "medgray1": "#757575",
                  "medgray2": "#888888",
                  "menuDark": "#21262A",
                  "menuLight": "#2E3841",
                  "orange400": "#ED8936",
                  "pink400": "#ED64A6",
                  "primary1": "#5548D9",
                  "primary2": "#212121",
                  "primary3": "#00796B",
                  "primary4": "#D32F2F",
                  "primary5": "#f0b941",
                  "purple400": "#9f7aea",
                  "red400": "#f56565",
                  "red600": "#C53030",
                  "secondary1": "#2E7D32",
                  "secondary2": "#757575",
                  "secondary3": "#673AB7",
                  "secondary4": "#9C27B0",
                  "secondary5": "#00796B",
                  "secondary6": "#ECF0FC",
                  "submenu": "#FFFFFF",
                  "success": "#C2F2EA",
                  "successIcon": "#007E6A",
                  "teal400": "#38B2AC",
                  "teal500": "#02999A",
                  "text": "#212121",
                  "warning": "#FFE9BB",
                  "warningIcon": "#B2551F",
                  "white": "#FFFFFF",
                },
                "reportColors": {
                  "bounceChart": "#eccb4c",
                  "box1": "#3fbaca",
                  "box2": "#d84840",
                  "box3": "#293346",
                  "box4": "#F0B941",
                  "box5": "#293346",
                  "box6": "#3fbaca",
                  "box7": "#F0B941",
                  "box8": "#d84840",
                  "circleChart1": "#3fbaca",
                  "circleChart2": "#d84840",
                  "circleChart3": "#E0E0E0",
                  "lowChart": "#d3d3d3",
                  "restChart1": "#3fbaca",
                  "restChart10": "#4262e1",
                  "restChart11": "#d5b9f9",
                  "restChart12": "#eb8838",
                  "restChart2": "#d84840",
                  "restChart3": "#E0E0E0",
                  "restChart4": "#F0B941",
                  "restChart5": "#293346",
                  "restChart6": "#d3d3d3",
                  "restChart7": "#f4ad55",
                  "restChart8": "#f9b3ce",
                  "restChart9": "#40b4ac",
                  "text": "1A1A1A",
                  "unsubChart": "#FC8181",
                },
                "styles": {
                  "buttonBorderRadius": "100px",
                },
              }
            }
            setLocale={[Function]}
            style={{}}
            textAlign={
              [
                "unset",
                "unset",
                "center",
                "center",
              ]
            }
          >
            <div
              className="sc-aXZVg fXGooD sc-dcJsrY etKzq myClass"
              fontSize={
                [
                  "12px",
                  "12px",
                  "20px",
                  "20px",
                ]
              }
              fontWeight={
                [
                  "bold",
                  "bold",
                  400,
                  400,
                ]
              }
              onClick={[MockFunction]}
              style={{}}
            />
          </StyledBox>
        </Memo()>
      </Box>
    </StyledActionsDropdownItem>
  </Component>
</ActionsDropdownItem>
`;
